# autotools-template

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
lib/: Makefile.am
lib/xxx/: .gitignore  Makefile.am  xxx.cc
src/: .gitignore  Makefile.am  main.cc
