
AC_INIT([cpptemplate], [0.0.0], [ryan551024@gmail.com])
AM_INIT_AUTOMAKE()

LT_INIT

# Accept Libraries
AC_PROG_RANLIB

# Set lang c++
AC_LANG(C++)
AC_PROG_CXX
AC_SUBST([CC])

# Makefiles
AC_CONFIG_FILES(
	Makefile
	lib/Makefile
	lib/xxx/Makefile
	src/Makefile
)

# Generate the configure script
AC_OUTPUT

